fixed animation overflow

--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -2,7 +2,6 @@
   height: auto;
   background-color: var(--primary-color);
   width: 100%;
-  height: auto;
 }
 .Footer p {
   color: var(--secondary-color);
