--- a/src/Universal.css
+++ b/src/Universal.css
@@ -37,8 +37,12 @@
 }
 html {
   background-color: var(--background-color);
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 main {
+  position: relative;
   overflow: hidden;
 }
 body,
